fixed text alignment on inputs

--- a/styles/global-values.css
+++ b/styles/global-values.css
@@ -143,6 +143,7 @@ main {
 .input {
   width: 250px;
   margin-bottom: 10px;
+  text-align: left;
 }
 
 /* -------  MAIN NAV  ------- */
